--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+*.env*
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# We don't do package-lock.json, see https://github.com/Financial-Times/next/issues/156
+package-lock.json
