--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "homepage": "https://github.com/Financial-Times/n-map-content-to-topper#readme",
   "devDependencies": {
     "@financial-times/n-gage": "^6.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^8.1.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.3",
     "snyk": "^1.379.2"
   },
   "husky": {
