--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ references:
   container_config_node12: &container_config_node12
     working_directory: ~/project/build
     docker:
-      - image: circleci/node:12-browsers
+      - image: cimg/node:16.14.2-browsers
 
   container_config_lambda_node12: &container_config_lambda_node12
     working_directory: ~/project/build
