--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "url": "https://github.com/Financial-Times/n-map-content-to-topper/issues"
   },
   "homepage": "https://github.com/Financial-Times/n-map-content-to-topper#readme",
+  "engines": {
+    "node": "16.x"
+  },
   "devDependencies": {
     "@financial-times/n-gage": "^8.2.0",
     "bower": "^1.8.8",
@@ -30,5 +33,9 @@
       "commit-msg": "secret-squirrel-commitmsg",
       "pre-push": "make verify -j3"
     }
+  },
+  "volta": {
+    "node": "16.14.2",
+    "npm": "7.20.2"
   }
 }
