--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "A library for mapping content to a topper on FT.com and the App",
   "main": "main.js",
   "scripts": {
-    "prepare": "npx snyk protect || npx snyk protect -d || true"
+    "prepare": "npx snyk protect || npx snyk protect -d || true && husky install",
+    "fix": "eslint '**/*.{js,json,yml}' --fix",
+    "precommit": "secret-squirrel && npm run format && npm run fix",
+    "prepush": "npm run test",
+    "format": "dotcom-tool-kit format:local",
+    "build": "dotcom-tool-kit build:local",
+    "test": "dotcom-tool-kit test:local",
+    "start": "dotcom-tool-kit run:local"
   },
   "repository": {
     "type": "git",
@@ -19,20 +26,26 @@
     "node": "16.x"
   },
   "devDependencies": {
-    "@financial-times/n-gage": "^8.2.0",
+    "@dotcom-tool-kit/circleci": "^2.1.4",
+    "@dotcom-tool-kit/circleci-npm": "^2.0.7",
+    "@dotcom-tool-kit/eslint": "^2.1.5",
+    "@dotcom-tool-kit/mocha": "^2.1.3",
+    "@dotcom-tool-kit/npm": "^2.0.7",
+    "@dotcom-tool-kit/prettier": "^2.0.7",
+    "@financial-times/eslint-config-next": "^4.0.0",
+    "@financial-times/secret-squirrel": "^2.21.0",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-yml": "^1.1.0",
     "bower": "^1.8.8",
     "chai": "^4.2.0",
+    "dotcom-tool-kit": "^2.3.3",
+    "husky": "^8.0.0",
     "mocha": "^8.1.1",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.3",
     "snyk": "^1.379.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "secret-squirrel",
-      "commit-msg": "secret-squirrel-commitmsg",
-      "pre-push": "make verify -j3"
-    }
   },
   "volta": {
     "node": "16.14.2",
