--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "main.js",
 	"scripts": {
 		"prepare": "npx snyk protect || npx snyk protect -d || true && husky install",
-		"fix": "eslint '**/*.{js,json,yml}' --fix",
 		"precommit": "secret-squirrel && npm run format && npm run fix",
 		"prepush": "npm run test",
+		"fix": "eslint '**/*.{js,json,yml}' --fix",
 		"format": "dotcom-tool-kit format:local",
 		"build": "dotcom-tool-kit build:local",
 		"test": "dotcom-tool-kit test:local",
@@ -23,7 +23,8 @@
 	},
 	"homepage": "https://github.com/Financial-Times/n-map-content-to-topper#readme",
 	"engines": {
-		"node": "16.x"
+		"node": "18.x || 20.x",
+		"npm": "9.x || 10.x"
 	},
 	"devDependencies": {
 		"@dotcom-tool-kit/circleci": "^2.1.4",
@@ -48,7 +49,13 @@
 		"snyk": "^1.379.2"
 	},
 	"volta": {
-		"node": "16.14.2",
-		"npm": "7.20.2"
+		"node": "18.20.2",
+		"npm": "10.5.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "secret-squirrel && npm run format && npm run fix",
+			"pre-push": "npm run test"
+		}
 	}
 }
