Remove snyk [automated]
In mid-December 2024 we will be letting our Snyk contract expire. We'll
be moving to GitHub Advanced Security as an alternative.

This PR is an attempt to get ahead of the deadline. Considering how out
of date some of our Snyk implementations are, and that we rarely take
the time to merge the PRs, we think it's fine to remove it way ahead of
time.

If you want an interrim solution, enable Dependabot Security updates for
this repository by visiting the following page and clicking 'Enable' next
to 'Dependabot security updates':
https://github.com/Financial-Times/n-map-content-to-topper/settings/security_analysis

You're also free to ignore this PR and do the work yourself closer to
the deadline. Cyber will be doing some broader comms later in the year.

This PR was automated, please take a little extra care when reviewing. I
won't be attempting to fix build failures or small repo-specific quirks
but feel free to build on top of this PR.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A library for mapping content to a topper on FT.com and the App",
 	"main": "main.js",
 	"scripts": {
-		"prepare": "npx snyk protect || npx snyk protect -d || true && husky install",
+		"prepare": "husky install",
 		"precommit": "secret-squirrel && npm run format && npm run fix",
 		"prepush": "npm run test",
 		"fix": "eslint '**/*.{js,json,yml}' --fix",
@@ -44,8 +44,7 @@
 		"husky": "^8.0.0",
 		"mocha": "^8.1.1",
 		"proxyquire": "^2.1.3",
-		"sinon": "^9.0.3",
-		"snyk": "^1.379.2"
+		"sinon": "^9.0.3"
 	},
 	"volta": {
 		"node": "18.20.2",
