--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 	},
 	"homepage": "https://github.com/Financial-Times/n-map-content-to-topper#readme",
 	"engines": {
-		"node": "18.x || 20.x",
+		"node": "18.x || 20.x || 22.x",
 		"npm": "9.x || 10.x"
 	},
 	"devDependencies": {
@@ -47,7 +47,7 @@
 		"sinon": "^9.0.3"
 	},
 	"volta": {
-		"node": "18.20.2",
+		"node": "22.14.0",
 		"npm": "10.5.0"
 	},
 	"husky": {
