--- a/.toolkitrc.yml
+++ b/.toolkitrc.yml
@@ -15,7 +15,7 @@ commands:
 options:
   plugins:
     '@dotcom-tool-kit/circleci':
-      nodeVersion: 18.16-browsers
+      cimgNodeVersions: ["22.14-browsers"]
   tasks:
     Eslint:
       files: 
